--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
+    "ethers": "^5.5.1",
     "react": "^17.0.2",
+    "react-animated-numbers": "^0.7.0",
+    "react-bootstrap": "^2.0.0",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-number-format": "^4.7.3",
+    "react-pdf": "^5.5.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
+    "react-syntax-highlighter": "^15.4.4",
+    "react-table": "^7.7.0",
+    "react-vertical-timeline-component": "^3.5.2",
+    "reactjs-popup": "^2.0.5",
+    "recharts": "^2.1.6",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
