--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.3.0"
+    "@emotion/babel-plugin": "^11.3.0",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
