--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ethers": "^5.5.1",
     "react": "^17.0.2",
     "react-animated-numbers": "^0.7.0",
+    "react-bootstrap": "^2.0.0",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-number-format": "^4.7.3",
