--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-number-format": "^4.7.3",
     "react-pdf": "^5.5.0",
+    "react-remove-scroll-bar": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
