--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethers": "^5.5.1",
     "react": "^17.0.2",
     "react-animated-numbers": "^0.7.0",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.0.0",
     "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
@@ -19,7 +20,7 @@
     "react-number-format": "^4.7.3",
     "react-pdf": "^5.5.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^5.1.0",
     "react-syntax-highlighter": "^15.4.4",
     "react-table": "^7.7.0",
